--- a/recipes/menudo.html
+++ b/recipes/menudo.html
@@ -54,6 +54,7 @@
     <li>Limes</li>
     <li>White onion</li>
     <li>Cliantro</li>
+    <li>Radishes</li>
     <li>Menudo mix or oregano (already included above)</li>
 </ul>
 
