--- a/recipes/pozole-verde-pork.html
+++ b/recipes/pozole-verde-pork.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>Pozole Verde</h1>
+<h1>Pozole Verde with Pork</h1>
 <img src="../img/pozole-verde-pork.jpg" alt="Photo of Pozole Verde with Pork">
 
 <h2>Description</h2>
@@ -41,6 +41,7 @@
             <li>Salt to your liking (2 tbsp is standard)</li>
             <li>Fresh thyme, bay leaves, oregano</li>
             <li>110 oz can of white hominy</li>
+
         <h3>For the sauce</h3>
             <li>4 anaheim peppers</li>
             <li>2 poblano peppers</li>
@@ -55,6 +56,7 @@
             <li>1 tbsp oregano</li>
             <li>2 tsp black pepper</li>
             <li>1 tsp cumin</li>
+            
         <h3>Garnishments (optional)</h3>
             <li>serano peppers</li>
             <li>white onion</li>
@@ -111,11 +113,6 @@
         <li>Serve and enjoy!</li>
     </ol>
 </p>
-
-
-
-
-
 </body>
 
 </html>
